update 2025 festival dates & add 2024 media

--- a/src/data/media.toml
+++ b/src/data/media.toml
@@ -1,3 +1,9 @@
+[[2024]]
+name = 'Espresso Buzz'
+type = 'photos'
+url = 'https://www.espressobuzz.net/Events/2024/06-02-HonkFestWest'
+
+
 [[2023]]
 name = 'Charles Daniels'
 type = 'photos'
