--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.2.0",
+    "@astrojs/svelte": "^7.0.4",
     "@glidejs/glide": "^3.7.1",
     "@types/glidejs__glide": "^3.6.5",
-    "astro": "^5.2.3"
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "astro": "^5.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "svelte": "^5.19.6",
+    "typescript": "^5.7.3",
+    "typescript-plugin-toml": "^0.5.0",
+    "vite-plugin-toml": "^0.7.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "marked": "^15.0.6",
     "tailwindcss": "^4.0.0",
     "toml": "^3.0.0"
   }
