--- a/src/data/media.toml
+++ b/src/data/media.toml
@@ -1,3 +1,11 @@
+[[social]]
+id = "facebook"
+name = "Facebook"
+url = "https://www.facebook.com/HONKFestWest/"
+[[social]]
+id = "instagram"
+name = "Instagram"
+url = "https://www.instagram.com/honkfestwest/"
 [[media]]
 id = '2024-espresso-buzz'
 year = 2024
