--- a/src/data/supporters.toml
+++ b/src/data/supporters.toml
@@ -1,3 +1,4 @@
+
 [[supporters_hide]]
 id = 'king_county_creative'
 type = 'art'
@@ -187,3 +188,13 @@ url = 'https://www.facebook.com/ColumbiaCityBeatwalk/'
 image_url = 'https://ik.imagekit.io/thegoldendino/hfw/supporters/BeatWalk-logo-blue-print___002__c_NNISjLkB.png'
 width = 2982
 height = 1125
+
+[[supporters]]
+id = 'honk_festival_west'
+type = 'footer-only'
+name = 'HONK! Festival West'
+footer = true
+url = 'https://honkfestwest.org/'
+image_url = 'https://ik.imagekit.io/honkfestwest/supporters/honkfestivalwest_a3ugVYBi7.png?updatedAt=1739145156884'
+width = 0
+height = 0
